@@ -1,9 +1,9 @@
 {
-  "timestamp" : "2022-10-03T16:33:25Z",
+  "timestamp" : "2022-10-06T01:45:59Z",
   "count_outdated" : 145,
   "uniques_outdated" : 101,
-  "count" : 152,
-  "uniques" : 108,
+  "count" : 153,
+  "uniques" : 109,
   "clones" : [
     {
       "timestamp": "2022-09-22T00:00:00Z",
@@ -49,6 +49,13 @@
     },
     {
       "timestamp": "2022-10-03T00:00:00Z",
+      "count": 1,
+      "count_minmax": [ 1, 1 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 1 ]
+    },
+    {
+      "timestamp": "2022-10-05T00:00:00Z",
       "count": 1,
       "count_minmax": [ 1, 1 ],
       "uniques": 1,
