@@ -1,6 +1,6 @@
 {
-  "count": 7,
-  "uniques": 2,
+  "count": 8,
+  "uniques": 3,
   "clones": [
     {
       "timestamp": "2022-09-22T00:00:00Z",
@@ -34,6 +34,11 @@
     },
     {
       "timestamp": "2022-10-03T00:00:00Z",
+      "count": 1,
+      "uniques": 1
+    },
+    {
+      "timestamp": "2022-10-05T00:00:00Z",
       "count": 1,
       "uniques": 1
     }
